test/replaceClassical.slq

def main(){
	a:=(0,0,0);
	a[0]:=1; /// error
}
